--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,4 +1,4 @@
 {
-    "*.+(js|jsx)": ["eslint --fix --no-verify", "git add"],
+    "*.+(js|jsx)": ["eslint --fix", "git add"],
     "*.+(json|css|md)": ["prettier --write", "git add"]
 }
