--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-scripts": "3.4.0",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
+    "typescript": "^3.9.2",
     "yarn": "^1.22.0"
   },
   "scripts": {
