--- a/.eslintrc
+++ b/.eslintrc
@@ -20,7 +20,7 @@
       ],
       "react/prop-types": 0,
       "react/sort-comp": 0,
-      "react/state-in-constructor": 0,
+      //"react/state-in-constructor": 0,
       "import/no-cycle": 0,
       "react/destructuring-assignment": 0
     }
