--- a/.eslintrc
+++ b/.eslintrc
@@ -18,10 +18,8 @@
           "semi": false
         }
       ],
-      "react/prop-types": 0,
-      "react/sort-comp": 0,
-      //"react/state-in-constructor": 0,
+      "react/state-in-constructor": 0,
       "import/no-cycle": 0,
-      "react/destructuring-assignment": 0
+      "react/prop-types": 0
     }
   }
