--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@fortawesome/react-fontawesome": "^0.1.9",
-    "@material-ui/core": "^4.9.12",
+    "@material-ui/core": "^4.9.14",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -18,7 +19,7 @@
     "eslint-plugin-prettier": "^3.1.3",
     "history": "latest",
     "husky": "^4.2.5",
-    "lint-staged": "^10.2.2",
+    "lint-staged": "^10.2.6",
     "notistack": "^0.9.11",
     "prettier": "^2.0.5",
     "react": "^16.12.0",
