--- a/.eslintrc
+++ b/.eslintrc
@@ -11,14 +11,16 @@
       "prettier"
     ],
     "rules": {
-      "semi": 0,
+      "semi": 1,
       "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
       "react/state-in-constructor": 0,
       "import/no-cycle": 0,
       "react/prop-types": 0,
+      "react/no-array-index-key": 0,
+      "react/jsx-props-no-spreading": 0,
       "prettier/prettier": [
         "error", {
-          "semi": false
+          "semi": true
         }
       ]
     }
