--- a/.eslintrc
+++ b/.eslintrc
@@ -18,6 +18,9 @@
       "react/prop-types": 0,
       "react/no-array-index-key": 0,
       "react/jsx-props-no-spreading": 0,
+      "no-nested-ternary": 0,
+      "react/prefer-stateless-function": 0,
+      "react/button-has-type": 0,
       "prettier/prettier": [
         "error", {
           "semi": true
