worked on the signIn and SignUp design for desktop

--- a/.eslintrc
+++ b/.eslintrc
@@ -43,7 +43,7 @@
 //   ]
 // }
 
-{
-  "parser": "babel-eslint",
-  "extends": ["standard", "standard-react"]
-}
+//{
+ // "parser": "babel-eslint",
+ // "extends": ["standard", "standard-react"]
+//}
