--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "typescript": "^3.9.2",
-    "yarn": "^1.22.0"
+    "yarn": "^1.22.0",
+    "eslint": "^7.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -51,8 +52,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "eslint": "^7.1.0"
   }
 }
