--- a/package.json
+++ b/package.json
@@ -13,10 +13,6 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
-    "eslint-config-airbnb": "^18.1.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.3",
     "history": "latest",
     "notistack": "^0.9.11",
     "prettier": "^2.0.5",
@@ -27,9 +23,15 @@
     "react-scripts": "3.4.0",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
+    "yarn": "^1.22.0"
+  },
+  "devDependencies": {
+    "eslint": "^7.1.0",
     "typescript": "^3.9.2",
-    "yarn": "^1.22.0",
-    "eslint": "^7.1.0"
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
