--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "react-scripts": "3.4.0",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
-    "yarn": "^1.22.0"
+    "yarn": "^1.22.0",
+    "react-paystack": "^2.0.2"
   },
   "devDependencies": {
-    "eslint": "^7.1.0",
     "typescript": "^3.9.2",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.11.0",
